# regressioninc

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/: commit_flow.yml
.github/workflows/: commit_flow.yml
docs/source/: conf.py  design.rst  development.rst  index.rst  introduction.rst  modules.rst  references.rst  regressioninc.base.rst  regressioninc.linear.models.rst  regressioninc.linear.robust.rst  regressioninc.linear.rst  regressioninc.math.rst  regressioninc.rst  regressioninc.testing.complex.rst  regressioninc.testing.real.rst  regressioninc.testing.rst  regressioninc.transform.rst  regressioninc.validation.rst  terminology.csv  terminology.rst
examples/: README.rst  eg_01_complex_problem.py  eg_01_complex_regression.py  eg_01_linear_regression.py  eg_02_complex_noise.py  eg_02_multiple_regressors.py  eg_03_complex_noise.py  eg_03_random_noise.py  eg_04_outliers.py  eg_05_leverage.py  eg_06_robust_regression.py  eg_07_complex_to_real.py  regression_complex.py  regression_real.py  temp_regression_complex.py  temp_testing.py  temp_weights.py
examples/complex_regression/: README.rst  eg_01_linear_regression.py  eg_02_multiple_regressors.py  eg_03_random_noise.py  eg_04_outliers.py  eg_05_leverage.py  eg_06_robust_regression.py  eg_07_complex_to_real.py
examples/linear_models/: README.rst  eg_01_ordinary_least_squares.py  eg_02_weighted_least_squares.py  eg_03_m_estimates.py
notebooks/: complex_regression.ipynb  linear_models.ipynb  scratch.ipynb
regressioninc/: __init__.py  base.py  errors.py  linear.py  math.py  mestimates.py  mmestimate.py  ols.py  testing.py  transform.py  validation.py
regressioninc/linear/: models.py  robust.py
regressioninc/testing/: complex.py  real.py
tests/: test_base.py  test_linear.py  test_math.py  test_ols.py  testing_data.py
tests/linear/: test_models.py
