[tool.poetry]
name = "regressioninc"
version = "0.1.0"
description = "A package for doing regression in the complex domain"
authors = ["nss350 <nss350@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.23.3"
loguru = "^0.6.0"
pydantic = "^1.10.2"


[tool.poetry.group.dev.dependencies]
black = "^22.8.0"
pre-commit = "^2.20.0"
darglint = "^1.8.1"
flake8 = "^5.0.4"
flake8-builtins = "^1.5.3"
flake8-docstrings = "^1.6.0"
flake8-bandit = "^4.1.1"
flake8-cognitive-complexity = "^0.1.0"
flake8-expression-complexity = "^0.0.11"


[tool.poetry.group.docs.dependencies]
Sphinx = "^5.2.3"
furo = "^2022.9.29"
sphinx-gallery = "^0.11.1"


[tool.poetry.group.tests.dependencies]
pytest = "^7.1.3"
pytest-cov = "^4.0.0"
pytest-html = "^3.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = "--doctest-modules"
doctest_optionflags = "NORMALIZE_WHITESPACE ELLIPSIS"
minversion = "6.0"
testpaths = ["regressioninc", "tests"]

[tool.coverage.paths]
source = ["regressioninc"]

[tool.coverage.run]
branch = true
source = ["regressioninc"]

[tool.coverage.report]
show_missing = false

[tool.coverage.html]
directory = "artifacts/coverage_html"

[tool.coverage.xml]
output = "coverage.xml"

[tool.black]
line-length = 88
target-version = ["py310"]