[tool.poetry]
name = "regressioninc"
version = "0.1.0a0"
description = "A package for doing regression in the complex domain"
authors = ["nss350 <nss350@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
numpy = ">=1.23.3"
loguru = ">=0.6.0"
pydantic = ">=1.10.2"
scipy = ">=1.9.1"
scikit-learn = ">=1.1.2"
matplotlib = ">=3.6.1"
statsmodels = ">=0.13.2"


[tool.poetry.group.dev.dependencies]
black = "*"
pre-commit = "*"
darglint = "*"
flake8 = "*"
flake8-builtins = "*"
flake8-docstrings = "*"
flake8-bandit = "*"
flake8-cognitive-complexity = "*"
flake8-expression-complexity = "*"


[tool.poetry.group.docs.dependencies]
Sphinx = "*"
furo = "*"
sphinx-gallery = "*"
autodoc-pydantic = "*"
sphinx-copybutton = "*"


[tool.poetry.group.tests.dependencies]
pytest = "*"
pytest-cov = "*"
pytest-html = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = "--doctest-modules"
doctest_optionflags = "NORMALIZE_WHITESPACE ELLIPSIS"
minversion = "6.0"
testpaths = ["regressioninc", "tests"]

[tool.coverage.paths]
source = ["regressioninc"]

[tool.coverage.run]
branch = true
source = ["regressioninc"]

[tool.coverage.report]
show_missing = false

[tool.coverage.html]
directory = "artifacts/coverage_html"

[tool.coverage.xml]
output = "coverage.xml"

[tool.black]
line-length = 88
target-version = ["py310"]
